# DavinciResolve_VoiceAutoTools_python

./: README.rst  manage.py  pyproject.toml
davinci_VoiceAutoTools/: uimanage.md
davinci_VoiceAutoTools/Modules/VoiceAutoTools/: VoiceAutoToolException.py
davinci_VoiceAutoTools/Modules/VoiceAutoTools/Config/: Config.ini  VoiceAutoToolConfig.py
davinci_VoiceAutoTools/Modules/VoiceAutoTools/Domain/: SrtItem.py  SrtList.py  TimelineVoiceItem.py  TimelineVoiceList.py  VoiceMediaBin.py  VoiceSyncWorker.py
davinci_VoiceAutoTools/Modules/VoiceAutoTools/Usecase/: CreateSrt2Local.py  PullVoice2MediaPool.py  PutTexts2Timeline.py  SyncVoices2MediaPool.py
davinci_VoiceAutoTools/Scripts/Comp/VoiceAutoTool2/: CreateFCPXML.py  CreateSrt.py  OpenConfig.py  PullVoices.py  PutTexts.py  SyncVoices.py  sandbox.py
tests/: test_davinciresolve_foldersyncer.py
